[metadata]
name = mdt-viewer
author = Tullio Facchinetti
author_email = toolleeo@gmail.com
summary = Markdown visualizer for the terminal with interactive features
url = https://github.com/robolab-pavia/mdt
license = GPL-3
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = mdt
install_requires =
	ansiwrap
	Click
	Mistletoe
	prompt_toolkit

include_package_data = True

[options.entry_points]
console_scripts =
	mdt = mdt:main
